<resources>
    <string name="app_name">Inventory App P1</string>
    <string name="action_settings">Settings</string>
    <string name="inventory_element_place_holder">Element placeholder</string>
    <string name="inventory_item_available_string">Currently we have %1$o book(s).</string>
    <string name="columns_placeholder">Columns are here</string>
    <string name="current_element_placeholder">Current Inventory</string>
    <string name="item_price_parsable_string">%1$s $</string>
    <string name="save_book">Save book</string>
    <string name="delete_book">Delete book</string>
    <string name="add_a_new_book">Add a new book</string>
    <string name="add_dummy_book">Add dummy book</string>
    <string name="delete_inventory">Delete inventory</string>
    <string name="new_item_name">* Book\'s name :</string>
    <string name="new_item_price">Price :</string>
    <string name="new_item_how_many">How many :</string>
    <string name="new_item_supplier">Your name :</string>
    <string name="new_item_contact_hint">Phone</string>
    <string name="edit_activity_add">Add item</string>
    <string name="edit_activity_edit">Edit item</string>
    <string name="edit_failed">An error occurred! Check your entries</string>
    <string name="edit_success">Item Successfully added</string>
    <string name="placeholder_id">001524444</string>
    <string name="edit_add_unsaved_items">You have unsaved items</string>
    <string name="edit_ok">OK</string>
    <string name="edit_keep_editing">Keep editing</string>
    <string name="delete_item_prompt">Are you sure you want remove this item?</string>
    <string name="delete_ok">Delete</string>
    <string name="delete_cancel">Cancel</string>
    <string name="new_book_name_hint">Little Prince</string>
    <string name="new_item_price_hint">Leave empty for \"Ask Price\"</string>
    <string name="new_item_how_many_hint">At least 1</string>
    <string name="new_item_supplier_hint">Leave blank for \"Anonymous\"</string>
    <string name="new_item_contact">* Contact :</string>
    <string name="edit_item_item_id">Item ID</string>
    <string name="ask_the_owner">Ask</string>
    <string name="anonymous_text">Anonymous</string>
    <string name="quantity_text">Quantity</string>
    <string name="sold_out_text">Sold out</string>
    <string name="item_delete">Item successfully deleted</string>
    <string name="delete_error">An error occurred! Try again</string>
    <string name="sell_item_icon">sell_item_icon</string>
    <string name="sell_item">Sell item</string>
    <string name="edit_item">Edit item</string>
    <string name="editor_bottom_prompt">Fields with (*) must be filled.</string>
    <string name="empty_db_text">Our inventory is empty. You are welcome to add new items.</string>
    <string name="item_details">Detail\'s</string>
    <string name="cant_sell_text">This book is already sold out</string>
    <string name="details_book_id_string">Inventory ID :</string>
    <string name="details_book_name_string">Book\'s name :</string>
    <string name="details_book_price_string">Price :</string>
    <string name="details_book_stock_string">In stock :</string>
    <string name="details_book_supplier_string">Supllier :</string>
    <string name="details_book_contact_string">Contact :</string>
    <string name="detail_button_text_sell">Sell item</string>
    <string name="detail_button_text_add">Add item</string>
    <string name="details_button_3">Call Supplier</string>
    <string name="details_id_parsable_string">#_%1$s</string>
    <string name="update_successful">Edit successful!</string>
</resources>
