<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/current_inventory"
        tools:text="@string/inventory_element_place_holder"
        style="@style/def_element_style" />

    <TextView
        android:id="@+id/columns_element"
        tools:text="@string/columns_placeholder"
        style="@style/def_element_style"/>

    <TextView
        android:id="@+id/current_element"
        tools:text="@string/current_element_placeholder"
        style="@style/def_element_style"/>

</LinearLayout>